beta8:
+ Add Endpoints! They are extra pathnames you specify on the end of the address
  / For example: "local.2/path"
+ Ender Receivers can use Endpoints to specify the side (north/south/east/west/up/down or top/bottom or front/back... many variations)
+ Ender Modems output the name of the Endpoint now.

beta7:
+ Ender Transmitters and Receivers now send MFR RedNet information (single channel). Woo!
+ Ender Transmitters and Receivers now send RedLogic bundled cable information (yes, you can exchange it with MFR). Wooooo!
+ Add a proper localization system!
+ Add a Polish translation!
+ Allow you to change the chat message format completely. See chat.messageFormat and the EnderNet website for more details.
+ Add optional /me, /hug and /slap commands.
+ Add the ability to add custom (/hug-like) action commands! Fun!
* Fix compatibility with Bukkit plugins and other Forge mods for shouting. I think.

beta6:
+ Added an "all" permission if you want to be 200% sure all is allowed.
* Fixed global permissions. The mod should work properly now.
* Removed debug message spam.

beta5:
* Fixed a bug that caused chat crashing on non-test-environment SMP servers.

beta4:
+ EnderNet transmitters and receivers can now send redstone signals!
+ Added Ender Chat Boxes. They will print out all messages they receive, as well as have a say(...) command to be able to say things.
+ Added playerRadius! It's a custom chat-radius system, works essentially like the one in Essentials.
+ Added randomHTTPPort parameter for LAN users. See console output for port for now.
+ Added globalPermissions - global (including intra-server) permissions.

beta3:
+ Add Ender Modems! They are far cheaper CC-message-only transceivers.
+ Add BuildCraft pipe support for Receivers!
+ Add the ability to whitelist dimensions.
+ Add "registerURIHandler" (String: class name) to register an IURIHandler via IMC.
+ Add the "disableCraftingRecipes" config option.