@@ -1,8 +1,11 @@
 package pl.asie.endernet.block;
 
+import java.util.ArrayList;
 import java.util.Random;
 
+import buildcraft.api.tools.IToolWrench;
 import pl.asie.endernet.EnderNet;
+import pl.asie.endernet.lib.MiscUtils;
 import powercrystals.minefactoryreloaded.api.rednet.IConnectableRedNet;
 import powercrystals.minefactoryreloaded.api.rednet.RedNetConnectionType;
 import mods.immibis.redlogic.api.wiring.IConnectable;
@@ -20,11 +23,13 @@ import net.minecraft.util.ChatMessageComponent;
 import net.minecraft.world.Explosion;
 import net.minecraft.world.World;
 import net.minecraftforge.common.ForgeDirection;
+import net.minecraftforge.event.ForgeEventFactory;
 
 public class BlockEnder extends BlockContainer implements IConnectableRedNet {
 	public BlockEnder(int id) {
 		super(id, Material.iron);
 		this.setCreativeTab(CreativeTabs.tabMisc);
+		this.setHardness(1.5F);
 	}
 	
 	@Override
@@ -34,7 +39,10 @@ public class BlockEnder extends BlockContainer implements IConnectableRedNet {
 	
 	@Override
 	public boolean onBlockActivated(World world, int x, int y, int z, EntityPlayer player, int par6, float par7, float par8, float par9) {
-		if(!world.isRemote && !player.isSneaking()) {
+		if(world.isRemote) return true;
+		if(player.isSneaking()) {
+			tryRemovingBlock(world, x, y, z, player);
+		} else { // Not sneaking
 			ChatMessageComponent chat = new ChatMessageComponent();
 			TileEntityEnder ender = (TileEntityEnder)world.getBlockTileEntity(x, y, z);
 			if(!ender.canReceive()) chat.addKey("error.endernet.dimension");
@@ -42,6 +50,27 @@ public class BlockEnder extends BlockContainer implements IConnectableRedNet {
 			player.sendChatToPlayer(chat);
 		}
 		return true;
+	}
+
+	public void tryRemovingBlock(World world, int x, int y, int z, EntityPlayer player) {
+		ItemStack held = player.inventory.getCurrentItem();
+		boolean doDrop = false;
+		if(held.getItem() instanceof IToolWrench && ((IToolWrench)held.getItem()).canWrench(player, x, y, z)) {
+			doDrop = true;
+			((IToolWrench)held.getItem()).wrenchUsed(player, x, y, z);
+		}
+		if(doDrop) {
+			TileEntityEnder ender = (TileEntityEnder)world.getBlockTileEntity(x, y, z);
+			ItemStack item = new ItemStack(this, 1);
+			NBTTagCompound enderData = item.getTagCompound();
+			if(enderData == null) enderData = new NBTTagCompound();
+			enderData.setInteger("eid", ender.enderNetID);
+
+			this.breakBlock(world, x, y, z, this.blockID, 0);
+			world.setBlockToAir(x, y, z);
+			item.setTagCompound(enderData);
+			MiscUtils.dropItem(world, x, y, z, item);
+		}
 	}
 
 	public void onBlockDestroyed(World world, int x, int y, int z, int meta) {
@@ -67,44 +96,8 @@ public class BlockEnder extends BlockContainer implements IConnectableRedNet {
     @Override
 	public void breakBlock(World world, int x, int y, int z, int id, int meta) {
     	this.onBlockDestroyed(world, x, y, z, meta);
-    	this.dropItems(world, x, y, z);
     	super.breakBlock(world, x, y, z, id, meta);
 	}
-    
-    public static void dropItems(World world, int x, int y, int z) {
-    	Random rand = new Random();
-    	TileEntity tileEntity = world.getBlockTileEntity(x, y, z);
-    	if (tileEntity == null || !(tileEntity instanceof IInventory)) {
-    		return;
-    	}
-    	IInventory inventory = (IInventory) tileEntity;
-
-    	for (int i = 0; i < inventory.getSizeInventory(); i++) {
-    		ItemStack item = inventory.getStackInSlot(i);
-
-    		if (item != null && item.stackSize > 0) {
-    			inventory.setInventorySlotContents(i, null);
-    			float rx = rand.nextFloat() * 0.8F + 0.1F;
-    			float ry = rand.nextFloat() * 0.8F + 0.1F;
-    			float rz = rand.nextFloat() * 0.8F + 0.1F;
-
-    			EntityItem entityItem = new EntityItem(world,
-    					x + rx, y + ry, z + rz,
-    					new ItemStack(item.itemID, item.stackSize, item.getItemDamage()));
-
-    			if (item.hasTagCompound()) {
-    				entityItem.getEntityItem().setTagCompound((NBTTagCompound)item.getTagCompound().copy());
-    			}
-
-    			float factor = 0.05F;
-    			entityItem.motionX = rand.nextGaussian() * factor;
-    			entityItem.motionY = rand.nextGaussian() * factor + 0.2F;
-    			entityItem.motionZ = rand.nextGaussian() * factor;
-    			world.spawnEntityInWorld(entityItem);
-    			item.stackSize = 0;
-    		}
-    	}
-    }
     
     public int getRedstoneValue(World world, int x, int y, int z) {
     	return (world.isBlockIndirectlyGettingPowered(x, y, z)  ? 1 : 0);
